--- a/README.html
+++ b/README.html
@@ -1,8 +1,16 @@
+<h1>My title</h1>
+<ul>
+<li>Hello</li>
+<li>Bye</li>
+</ul>
 <p>
 Hello
+<br/>
+</p>
 </p>
 <p>
 I'm a text
 <br/>
+</p>
 with 2 lines
 </p>
