--- a/README.html
+++ b/README.html
@@ -1,15 +1,15 @@
 <h1>My title</h1>
 <ul>
-<li>Hello</li>
+<li>He<b>l</b>lo</li>
 <li>Bye</li>
 </ul>
 <p>
 Hello
 </p>
-</p>
 <p>
-I'm a text
-<br/>
+I'm <b>a</b> text
+with <em>2 lines</em>
 </p>
-with 2 lines
-</p>
+<ul>
+<li>Or in bold**</li>
+</ul>
